# espsimlight

./: README.md  pyproject.toml
assets/: example.mov  example.webm
espsimlight/: __init__.py  espsimlight.py
examples/: desklamp.shape  gradient.py  running_brightness.py
